# ai-moderation-lab

./: README.MD  app.py  inference.py  openenv.yalm  openenv.yaml  pyproject.toml
data/: easy.json  easy.py  hard.json  hard.py  medium.json  medium.py
env/: environment.py  graders.py  models.py  supervisor.py  tasks.py
scripts/: baseline.py
server/: app.py
static/: app.js
templates/: index.html
