[project]
name = "ai-moderation-lab"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.entry-points."openenv.tasks"]
easy = "data.easy:get_task"
medium = "data.medium:get_task"
hard = "data.hard:get_task"
